packages/moonjuice-transpiler-luau/src/tests/snapshots/moonjuice_transpiler_luau__tests__statements__tests__should_call_function_indirectly_when_lhs_expression.snap
---
source: packages/moonjuice-transpiler-luau/src/tests/statements.rs
description: do fun end()
expression: luau_source
---
local exports_TEST_ID_1 = {}

local _ = (fun)()

return exports_TEST_ID_1
