packages/moonjuice-transpiler-luau/src/tests/snapshots/moonjuice_transpiler_luau__tests__statements__tests__should_not_wrap_assignment_in_block.snap
---
source: packages/moonjuice-transpiler-luau/src/tests/statements.rs
description: do x = y end
expression: luau_source
---
local exports_TEST_ID_1 = {}

do
x = y
end


return exports_TEST_ID_1
