packages/moonjuice-transpiler-luau/src/tests/snapshots/moonjuice_transpiler_luau__tests__statements__tests__should_not_wrap_define.snap
---
source: packages/moonjuice-transpiler-luau/src/tests/statements.rs
description: def x = y
expression: luau_source
---
local exports_TEST_ID_1 = {}

const x = y;


return exports_TEST_ID_1
